--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+ .letter {
+  background-color: #3498DC;
+  color: white;
+  width: 20px;
+  height: 20px;
+  margin: 8px;
+  padding: 8px;
+  text-align: center;
+ }
+
+ .letters {
+  display: flex;
+  flex-direction: row;
+ }
