--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -5,5 +5,5 @@
 <% else %>
     <p>Congratulations <%=params[:answer]%> is a valid English word:</p>
 <% end %>
-
+<p>score : <%= session[:score] %></p>
 <%= link_to "Play again", new_path %>
